--- a/albums/album-1.html
+++ b/albums/album-1.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link active" href="/albums/album-1.html">album 1<span class="sr-only">(current)</span></a>
